# sds_final_project_k8s

.github/workflows/: build.yaml
ansible/: ansible.cfg  deploy-apps.yaml  inventory.ini  join-workers.yaml  setup-microk8s.yaml
bff/: pyproject.toml
bff/src/: server.py
deploy/: ingress.yaml  metallb-config.yaml
deploy/bff/: deployment.yaml  service.yaml
deploy/face-detection/: deployment.yaml  deployment.yml  service.yaml  service.yml
deploy/file-converter/: deployment.yaml  service.yaml
deploy/web/: deployment.yaml  service.yaml
face-detection/: .gitignore  dockerfile  pyproject.toml
face-detection/src/: server.py
face-detection/tests/: example.py  test-client.py
file-converter/: dockerfile
file-converter/src/: server.py
file_converter/: pyproject.toml
file_converter/src/: convert.py  server.py
scripts/: check-status.sh  cleanup.sh  setup-cluster.sh  test-connectivity.sh
web/: .env.example  Dockerfile  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/detect/: route.ts
web/components/: detection-result.tsx  detection-section.tsx  health-check.tsx  image-upload.tsx
web/components/ui/: card.tsx  select.tsx
web/utils/: health.ts
