[project]
name = "face-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "uvicorn>=0.27.0",
    "ultralytics>=8.0.0",
    "requests>=2.32.5",
]
