[project]
name = "face-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "uvicorn>=0.27.0",
    "requests>=2.32.5",
    "dlib>=20.0.0",
    "cmake>=4.1.2",
    "face-recognition>=1.3.0",
    "setuptools==80.9.0",
    "opencv-python-headless>=4.11.0.86",
]
